@@ -3,10 +3,6 @@ package com.woowacourse.zzimkkong.controller;
 import com.woowacourse.zzimkkong.domain.Reservation;
 import com.woowacourse.zzimkkong.dto.reservation.*;
 import com.woowacourse.zzimkkong.infrastructure.AuthorizationExtractor;
-import com.woowacourse.zzimkkong.repository.MapRepository;
-import com.woowacourse.zzimkkong.repository.MemberRepository;
-import com.woowacourse.zzimkkong.repository.ReservationRepository;
-import com.woowacourse.zzimkkong.repository.SpaceRepository;
 import com.woowacourse.zzimkkong.service.SlackService;
 import io.restassured.RestAssured;
 import io.restassured.response.ExtractableResponse;
@@ -14,51 +10,47 @@ import io.restassured.response.Response;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 
 import java.util.Arrays;
-import java.util.List;
 
 import static com.woowacourse.zzimkkong.CommonFixture.*;
 import static com.woowacourse.zzimkkong.DocumentUtils.*;
 import static com.woowacourse.zzimkkong.controller.AuthControllerTest.getToken;
+import static com.woowacourse.zzimkkong.controller.MapControllerTest.saveMap;
+import static com.woowacourse.zzimkkong.controller.MemberControllerTest.saveMember;
+import static com.woowacourse.zzimkkong.controller.SpaceControllerTest.saveSpace;
+import static com.woowacourse.zzimkkong.service.ServiceTestFixture.THE_DAY_AFTER_TOMORROW;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.springframework.restdocs.restassured3.RestAssuredRestDocumentation.document;
 
 public class ManagerReservationControllerTest extends AcceptanceTest {
-    @Autowired
-    private MemberRepository members;
-
-    @Autowired
-    private SpaceRepository spaces;
-
-    @Autowired
-    private MapRepository maps;
-
-    @Autowired
-    private ReservationRepository reservations;
-
     @MockBean
     private SlackService slackService;
 
+    private final String reservationApi = "/api/managers/maps/" + LUTHER.getId() + "/reservations";
     private ReservationCreateUpdateWithPasswordRequest reservationCreateUpdateWithPasswordRequest;
     private Reservation savedReservation;
-    private String token;
+    private Long beSpaceId;
+    private Long savedReservationId;
+    private String savedReservationApi;
 
     @BeforeEach
     void setUp() {
-        members.save(POBI); //TODO: 관련 테스트메서드 생성 시 repository 안쓰도록 수정 - 샐리
-        maps.save(LUTHER);
-        spaces.save(BE);
-        spaces.save(FE1);
+        saveMember(memberSaveRequest);
+        saveMap("/api/managers/maps", mapCreateRequest);
+        String spaceSaveApi = "/api/managers/maps/" + LUTHER.getId() + "/spaces";
+        ExtractableResponse<Response> saveBeSpaceResponse = saveSpace(spaceSaveApi, beSpaceCreateUpdateRequest);
+        saveSpace(spaceSaveApi, feSpaceCreateUpdateRequest);
+
+        beSpaceId = Long.valueOf(saveBeSpaceResponse.header("location").split("/")[6]);
 
         reservationCreateUpdateWithPasswordRequest = new ReservationCreateUpdateWithPasswordRequest(
-                BE.getId(),
-                TOMORROW.atTime(12, 0),
-                TOMORROW.atTime(13, 0),
+                beSpaceId,
+                THE_DAY_AFTER_TOMORROW.atTime(12, 0),
+                THE_DAY_AFTER_TOMORROW.atTime(13, 0),
                 SALLY_PASSWORD,
                 SALLY_NAME,
                 SALLY_DESCRIPTION);
@@ -72,46 +64,36 @@ public class ManagerReservationControllerTest extends AcceptanceTest {
                 .space(BE)
                 .build();
 
-        token = getToken();
+        ExtractableResponse<Response> saveResponse = saveExampleReservations();
+        String location = saveResponse.header("location");
+        savedReservationId = Long.valueOf(location.split("/")[6]);
+        savedReservationApi = location.replaceAll("/reservations/[0-9]", "/spaces/" + beSpaceId + "/reservations");
     }
 
     @DisplayName("올바른 토큰이 주어질 때, 예약을 등록한다.")
     @Test
     void save() {
-        //given, when
-        String api = "/api/managers/maps/" + LUTHER.getId() + "/reservations";
-        ExtractableResponse<Response> response = saveReservation(token, api, reservationCreateUpdateWithPasswordRequest);
+        //given
+        ReservationCreateUpdateWithPasswordRequest newReservationCreateUpdateWithPasswordRequest = new ReservationCreateUpdateWithPasswordRequest(
+                beSpaceId,
+                THE_DAY_AFTER_TOMORROW_START_TIME.plusHours(5),
+                THE_DAY_AFTER_TOMORROW_START_TIME.plusHours(7),
+                SALLY_PASSWORD,
+                SALLY_NAME,
+                SALLY_DESCRIPTION);
+
+        //when
+        ExtractableResponse<Response> response = saveReservation(reservationApi, newReservationCreateUpdateWithPasswordRequest);
 
         //then
         assertThat(response.statusCode()).isEqualTo(HttpStatus.CREATED.value());
     }
 
-    @DisplayName("올바른 토큰이 주어질 때, 예약을 삭제한다.")
-    @Test
-    void delete() {
-        //given
-        String saveApi = "/api/managers/maps/" + LUTHER.getId() + "/reservations";
-        ExtractableResponse<Response> saveResponse = saveReservation(token, saveApi, reservationCreateUpdateWithPasswordRequest);
-        String api = saveResponse.header("location");
-
-        //when
-        ExtractableResponse<Response> response = deleteReservation(token, api);
-
-        //then
-        assertThat(response.statusCode()).isEqualTo(HttpStatus.NO_CONTENT.value());
-    }
-
     @DisplayName("map id, space id, 특정 날짜가 주어질 때 해당 맵, 해당 공간, 해당 날짜에 속하는 예약들만 찾아온다")
     @Test
     void find() {
-        //given
-        ExtractableResponse<Response> saveResponse = saveExampleReservations();
-        String spaceId = String.valueOf(reservationCreateUpdateWithPasswordRequest.getSpaceId());
-        String api = saveResponse.header("location")
-                .replaceAll("/reservations/[0-9]", "/spaces/" + spaceId + "/reservations");
-
-        //when
-        ExtractableResponse<Response> response = findReservations(token, api, TOMORROW.toString());
+        //given, when
+        ExtractableResponse<Response> response = findReservations(savedReservationApi, THE_DAY_AFTER_TOMORROW.toString());
 
         ReservationFindResponse actualResponse = response.as(ReservationFindResponse.class);
         ReservationFindResponse expectedResponse = ReservationFindResponse.from(
@@ -130,18 +112,13 @@ public class ManagerReservationControllerTest extends AcceptanceTest {
     @DisplayName("map id와 특정 날짜가 주어질 때 해당 맵, 해당 날짜의 모든 공간에 대한 예약을 조회한다.")
     @Test
     void findAll() {
-        //given
-        ExtractableResponse<Response> saveResponse = saveExampleReservations();
-        String api = saveResponse.header("location")
-                .replaceAll("/reservations/[0-9]", "/reservations");
-
-        //when
-        ExtractableResponse<Response> response = findAllReservations(token, api, TOMORROW.toString());
+        //given, when
+        ExtractableResponse<Response> response = findAllReservations(reservationApi, THE_DAY_AFTER_TOMORROW.toString());
 
         ReservationFindAllResponse actualResponse = response.as(ReservationFindAllResponse.class);
         ReservationFindAllResponse expectedResponse = ReservationFindAllResponse.from(
-                List.of(BE, FE1),
-                List.of(savedReservation,
+                Arrays.asList(BE, FE1),
+                Arrays.asList(savedReservation,
                         BE_AM_ZERO_ONE,
                         BE_PM_ONE_TWO,
                         FE1_ZERO_ONE));
@@ -150,6 +127,7 @@ public class ManagerReservationControllerTest extends AcceptanceTest {
         assertThat(response.statusCode()).isEqualTo(HttpStatus.OK.value());
         assertThat(actualResponse).usingRecursiveComparison()
                 .ignoringCollectionOrder()
+                .ignoringActualNullFields()
                 .ignoringExpectedNullFields()
                 .isEqualTo(expectedResponse);
     }
@@ -158,29 +136,29 @@ public class ManagerReservationControllerTest extends AcceptanceTest {
     @Test
     void update_sameSpace() {
         //given
-        ExtractableResponse<Response> saveResponse = saveExampleReservations();
-        String api = saveResponse.header("location");
-
         ReservationCreateUpdateRequest reservationCreateUpdateRequestSameSpace = new ReservationCreateUpdateRequest(
                 reservationCreateUpdateWithPasswordRequest.getSpaceId(),
-                TOMORROW.atTime(1, 0, 0),
-                TOMORROW.atTime(2, 30, 0),
+                THE_DAY_AFTER_TOMORROW.atTime(1, 0),
+                THE_DAY_AFTER_TOMORROW.atTime(2, 30),
                 "sally",
                 "회의입니다."
         );
+        String api = reservationApi + "/" + savedReservationId;
 
         //when
-        ExtractableResponse<Response> updateResponse = updateReservation(token, api, reservationCreateUpdateRequestSameSpace);
-        ExtractableResponse<Response> findResponse = findReservation(token, api);
+        ExtractableResponse<Response> updateResponse = updateReservation(api, reservationCreateUpdateRequestSameSpace);
+        ExtractableResponse<Response> findResponse = findReservation(api);
 
-        ReservationResponse actualResponse = findResponse.body().as(ReservationResponse.class);
-        ReservationResponse expectedResponse = ReservationResponse.from(new Reservation.Builder()
-                .startTime(reservationCreateUpdateRequestSameSpace.getStartDateTime())
-                .endTime(reservationCreateUpdateRequestSameSpace.getEndDateTime())
-                .description(reservationCreateUpdateRequestSameSpace.getDescription())
-                .userName(reservationCreateUpdateRequestSameSpace.getName())
-                .space(BE)
-                .build());
+        ReservationResponse actualResponse = findResponse.as(ReservationResponse.class);
+        ReservationResponse expectedResponse = ReservationResponse.from(
+                new Reservation.Builder()
+                        .id(savedReservationId)
+                        .startTime(reservationCreateUpdateRequestSameSpace.getStartDateTime())
+                        .endTime(reservationCreateUpdateRequestSameSpace.getEndDateTime())
+                        .description(reservationCreateUpdateRequestSameSpace.getDescription())
+                        .userName(reservationCreateUpdateRequestSameSpace.getName())
+                        .space(BE)
+                        .build());
 
         //then
         assertThat(updateResponse.statusCode()).isEqualTo(HttpStatus.OK.value());
@@ -190,37 +168,37 @@ public class ManagerReservationControllerTest extends AcceptanceTest {
                 .isEqualTo(expectedResponse);
     }
 
-    @DisplayName("공간 변경 있는 새로운 예약 정보가 주어지면 공간을 이동한 채로 예약을 업데이트 한다")
+    @DisplayName("공간 변경 있는 새로운 예약 정보가 주어지면 공간을 이동한 채로 예약을 업데이트 한다.")
     @Test
     void update_spaceUpdate() {
         //given
-        ExtractableResponse<Response> saveResponse = saveExampleReservations();
-        String api = saveResponse.header("location");
-
-        ReservationCreateUpdateRequest reservationCreateUpdateRequestDifferentSpace = new ReservationCreateUpdateRequest(
+        ReservationCreateUpdateWithPasswordRequest reservationCreateUpdateWithPasswordRequestDifferentSpace = new ReservationCreateUpdateWithPasswordRequest(
                 FE1.getId(),
-                TOMORROW.atTime(3, 30, 0),
-                TOMORROW.atTime(4, 30, 0),
+                THE_DAY_AFTER_TOMORROW.atTime(3, 30),
+                THE_DAY_AFTER_TOMORROW.atTime(4, 30),
+                SALLY_PASSWORD,
                 "sally",
                 "회의입니다."
         );
 
+        String api = reservationApi + "/" + savedReservationId;
+
         //when
-        ExtractableResponse<Response> updateResponse = updateReservation(token, api, reservationCreateUpdateRequestDifferentSpace);
+        ExtractableResponse<Response> updateResponse = updateReservation(api, reservationCreateUpdateWithPasswordRequestDifferentSpace);
         ExtractableResponse<Response> findResponse = findReservations(
-                token,
                 api.replaceAll("/reservations/[0-9]",
-                        "/spaces/" + FE1.getId() + "/reservations"),
-                TOMORROW.toString());
+                        "/spaces/" + reservationCreateUpdateWithPasswordRequestDifferentSpace.getSpaceId() + "/reservations"),
+                THE_DAY_AFTER_TOMORROW.toString());
 
         ReservationFindResponse actualResponse = findResponse.as(ReservationFindResponse.class);
         ReservationFindResponse expectedResponse = ReservationFindResponse.from(
                 Arrays.asList(
                         new Reservation.Builder()
-                                .startTime(reservationCreateUpdateRequestDifferentSpace.getStartDateTime())
-                                .endTime(reservationCreateUpdateRequestDifferentSpace.getEndDateTime())
-                                .description(reservationCreateUpdateRequestDifferentSpace.getDescription())
-                                .userName(reservationCreateUpdateRequestDifferentSpace.getName())
+                                .startTime(reservationCreateUpdateWithPasswordRequestDifferentSpace.getStartDateTime())
+                                .endTime(reservationCreateUpdateWithPasswordRequestDifferentSpace.getEndDateTime())
+                                .description(reservationCreateUpdateWithPasswordRequestDifferentSpace.getDescription())
+                                .userName(reservationCreateUpdateWithPasswordRequestDifferentSpace.getName())
+                                .password(reservationCreateUpdateWithPasswordRequestDifferentSpace.getPassword())
                                 .space(FE1)
                                 .build(),
                         FE1_ZERO_ONE
@@ -234,15 +212,25 @@ public class ManagerReservationControllerTest extends AcceptanceTest {
                 .isEqualTo(expectedResponse);
     }
 
+    @DisplayName("예약을 삭제한다.")
+    @Test
+    void delete() {
+        //given, when
+        ReservationPasswordAuthenticationRequest reservationPasswordAuthenticationRequest
+                = new ReservationPasswordAuthenticationRequest(SALLY_PASSWORD);
+
+        String api = reservationApi + "/" + savedReservationId;
+
+        //then
+        ExtractableResponse<Response> response = deleteReservation(api, reservationPasswordAuthenticationRequest);
+        assertThat(response.statusCode()).isEqualTo(HttpStatus.NO_CONTENT.value());
+    }
+
     @DisplayName("올바른 토큰과 함께 예약 수정을 위한 예약 조회 요청 시, 예약에 대한 정보를 반환한다")
     @Test
     void findOne() {
-        //given
-        ExtractableResponse<Response> saveResponse = saveExampleReservations();
-        String api = saveResponse.header("location");
-
-        //when
-        ExtractableResponse<Response> response = findReservation(token, api);
+        //given, when
+        ExtractableResponse<Response> response = findReservation(reservationApi + "/" + savedReservationId);
 
         ReservationResponse actualResponse = response.as(ReservationResponse.class);
         ReservationResponse expectedResponse = ReservationResponse.from(savedReservation);
@@ -255,23 +243,53 @@ public class ManagerReservationControllerTest extends AcceptanceTest {
     }
 
     private ExtractableResponse<Response> saveExampleReservations() {
-        reservations.save(BE_AM_ZERO_ONE);
-        reservations.save(BE_PM_ONE_TWO);
-        reservations.save(BE_NEXT_DAY_PM_SIX_TWELVE);
-        reservations.save(FE1_ZERO_ONE);
+        ReservationCreateUpdateWithPasswordRequest beAmZeroOneRequest = new ReservationCreateUpdateWithPasswordRequest(
+                BE_AM_ZERO_ONE.getSpace().getId(),
+                BE_AM_ZERO_ONE.getStartTime(),
+                BE_AM_ZERO_ONE.getEndTime(),
+                BE_AM_ZERO_ONE.getPassword(),
+                BE_AM_ZERO_ONE.getUserName(),
+                BE_AM_ZERO_ONE.getDescription());
 
-        String api = "/api/managers/maps/" + LUTHER.getId() + "/reservations";
-        return saveReservation(token, api, reservationCreateUpdateWithPasswordRequest);
+        ReservationCreateUpdateWithPasswordRequest bePmOneTwoRequest = new ReservationCreateUpdateWithPasswordRequest(
+                BE_PM_ONE_TWO.getSpace().getId(),
+                BE_PM_ONE_TWO.getStartTime(),
+                BE_PM_ONE_TWO.getEndTime(),
+                BE_PM_ONE_TWO.getPassword(),
+                BE_PM_ONE_TWO.getUserName(),
+                BE_PM_ONE_TWO.getDescription());
+
+        ReservationCreateUpdateWithPasswordRequest beNextDayPmSixTwelveRequest = new ReservationCreateUpdateWithPasswordRequest(
+                BE_NEXT_DAY_PM_SIX_TWELVE.getSpace().getId(),
+                BE_NEXT_DAY_PM_SIX_TWELVE.getStartTime(),
+                BE_NEXT_DAY_PM_SIX_TWELVE.getEndTime(),
+                BE_NEXT_DAY_PM_SIX_TWELVE.getPassword(),
+                BE_NEXT_DAY_PM_SIX_TWELVE.getUserName(),
+                BE_NEXT_DAY_PM_SIX_TWELVE.getDescription());
+
+        ReservationCreateUpdateWithPasswordRequest feZeroOneRequest = new ReservationCreateUpdateWithPasswordRequest(
+                FE1_ZERO_ONE.getSpace().getId(),
+                FE1_ZERO_ONE.getStartTime(),
+                FE1_ZERO_ONE.getEndTime(),
+                FE1_ZERO_ONE.getPassword(),
+                FE1_ZERO_ONE.getUserName(),
+                FE1_ZERO_ONE.getDescription());
+
+        saveReservation(reservationApi, beAmZeroOneRequest);
+        saveReservation(reservationApi, bePmOneTwoRequest);
+        saveReservation(reservationApi, beNextDayPmSixTwelveRequest);
+        saveReservation(reservationApi, feZeroOneRequest);
+
+        return saveReservation(reservationApi, reservationCreateUpdateWithPasswordRequest);
     }
 
     private ExtractableResponse<Response> saveReservation(
-            final String token,
             final String api,
             final ReservationCreateUpdateWithPasswordRequest reservationCreateUpdateWithPasswordRequest) {
         return RestAssured
                 .given(getRequestSpecification()).log().all()
                 .accept("application/json")
-                .header("Authorization", AuthorizationExtractor.AUTHENTICATION_TYPE + " " + token)
+                .header("Authorization", AuthorizationExtractor.AUTHENTICATION_TYPE + " " + getToken())
                 .filter(document("reservation/manager/post", getRequestPreprocessor(), getResponsePreprocessor()))
                 .contentType(MediaType.APPLICATION_JSON_VALUE)
                 .body(reservationCreateUpdateWithPasswordRequest)
@@ -279,70 +297,62 @@ public class ManagerReservationControllerTest extends AcceptanceTest {
                 .then().log().all().extract();
     }
 
-    private ExtractableResponse<Response> deleteReservation(
-            final String token,
-            final String api) {
+    private ExtractableResponse<Response> findReservations(final String api, final String date) {
         return RestAssured
                 .given(getRequestSpecification()).log().all()
                 .accept("*/*")
-                .header("Authorization", AuthorizationExtractor.AUTHENTICATION_TYPE + " " + token)
-                .filter(document("reservation/manager/delete", getRequestPreprocessor(), getResponsePreprocessor()))
-                .when().delete(api)
-                .then().log().all().extract();
-    }
-
-    private ExtractableResponse<Response> findAllReservations(
-            final String token,
-            final String api,
-            final String date) {
-        return RestAssured
-                .given(getRequestSpecification()).log().all()
-                .accept("*/*")
-                .header("Authorization", AuthorizationExtractor.AUTHENTICATION_TYPE + " " + token)
-                .filter(document("reservation/manager/get_all", getRequestPreprocessor(), getResponsePreprocessor()))
-                .queryParam("date", date)
-                .when().get(api)
-                .then().log().all().extract();
-    }
-
-    private ExtractableResponse<Response> findReservations(
-            final String token,
-            final String api,
-            final String date) {
-        return RestAssured
-                .given(getRequestSpecification()).log().all()
-                .accept("*/*")
-                .header("Authorization", AuthorizationExtractor.AUTHENTICATION_TYPE + " " + token)
+                .header("Authorization", AuthorizationExtractor.AUTHENTICATION_TYPE + " " + getToken())
                 .filter(document("reservation/manager/get", getRequestPreprocessor(), getResponsePreprocessor()))
                 .queryParams("date", date)
                 .when().get(api)
                 .then().log().all().extract();
     }
 
-    private ExtractableResponse<Response> findReservation(
-            final String token,
-            final String api) {
+    private ExtractableResponse<Response> findAllReservations(final String api, final String date) {
         return RestAssured
                 .given(getRequestSpecification()).log().all()
                 .accept("*/*")
-                .header("Authorization", AuthorizationExtractor.AUTHENTICATION_TYPE + " " + token)
-                .filter(document("reservation/manager/get_one", getRequestPreprocessor(), getResponsePreprocessor()))
+                .header("Authorization", AuthorizationExtractor.AUTHENTICATION_TYPE + " " + getToken())
+                .filter(document("reservation/manager/getAll", getRequestPreprocessor(), getResponsePreprocessor()))
+                .queryParam("date", date)
                 .when().get(api)
                 .then().log().all().extract();
     }
 
-    private ExtractableResponse<Response> updateReservation(
-            final String token,
-            final String api,
-            final ReservationCreateUpdateRequest reservationCreateUpdateRequest) {
+    private ExtractableResponse<Response> updateReservation(final String api, final ReservationCreateUpdateRequest reservationCreateUpdateRequest) {
         return RestAssured
                 .given(getRequestSpecification()).log().all()
                 .accept("application/json")
-                .header("Authorization", AuthorizationExtractor.AUTHENTICATION_TYPE + " " + token)
+                .header("Authorization", AuthorizationExtractor.AUTHENTICATION_TYPE + " " + getToken())
                 .filter(document("reservation/manager/put", getRequestPreprocessor(), getResponsePreprocessor()))
                 .contentType(MediaType.APPLICATION_JSON_VALUE)
                 .body(reservationCreateUpdateRequest)
                 .when().put(api)
+                .then().log().all().extract();
+    }
+
+    private ExtractableResponse<Response> findReservation(final String api) {
+        return RestAssured
+                .given(getRequestSpecification()).log().all()
+                .accept("*/*")
+                .header("Authorization", AuthorizationExtractor.AUTHENTICATION_TYPE + " " + getToken())
+                .filter(document("reservation/manager/getForUpdate", getRequestPreprocessor(), getResponsePreprocessor()))
+                .contentType(MediaType.APPLICATION_JSON_VALUE)
+                .when().get(api)
+                .then().log().all().extract();
+    }
+
+    private ExtractableResponse<Response> deleteReservation(
+            final String api,
+            final ReservationPasswordAuthenticationRequest reservationPasswordAuthenticationRequest) {
+        return RestAssured
+                .given(getRequestSpecification()).log().all()
+                .accept("application/json")
+                .header("Authorization", AuthorizationExtractor.AUTHENTICATION_TYPE + " " + getToken())
+                .filter(document("reservation/manager/delete", getRequestPreprocessor(), getResponsePreprocessor()))
+                .contentType(MediaType.APPLICATION_JSON_VALUE)
+                .body(reservationPasswordAuthenticationRequest)
+                .when().delete(api)
                 .then().log().all().extract();
     }
 }
